# Smart-File-Organizer

./: .gitignore  LICENSE  README.md  install.sh  package-lock.json  package.json  tailwind.config.js
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cloud_sync.rs  commands.rs  database.rs  file_ops.rs  lib.rs  utils.rs
src/routes/: +layout.svelte  +page.svelte
