[package]
name = "smart-file-organizer"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "smart_file_organizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# File monitoring
notify = "6.1"
notify-debouncer-mini = "0.4"
# Database
rusqlite = { version = "0.30", features = ["bundled"] }
# File operations
tokio = { version = "1.32", features = ["full"] }
chrono = "0.4"
# Error handling
thiserror = "1.0"
anyhow = "1.0"
# Optional: AWS SDK for cloud backup
aws-config = "1.0"
aws-sdk-s3 = "1.4"
# Utilities
dirs = "5.0"

